# helix-db

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  Dev-Manual.md  PERFORMANCE_BOTTLENECK_REPORT.md  PERFORMANCE_TUNING.md  README-MEMST.md  README.md  ROCKSDB_OPTIMAL_CONFIG.md  ROCKSDB_VECTORCORE_PLAN.md  clippy_check.sh
helix-cli/: Cargo.toml  README.md  TESTING.md  build.sh  install.ps1  install.sh
helix-cli/src/: args.rs  config.rs  docker.rs  env_utils.rs  errors.rs  github_issue.rs  instance_manager.rs  lib.rs  local_runtime.rs  main.rs  metrics_sender.rs  project.rs  prompts.rs  styled_string.rs  update.rs  utils.rs
helix-cli/src/commands/: add.rs  ai.rs  auth.rs  backup.rs  branch.rs  build.rs  check.rs  chef.rs  compile.rs  create_cluster.rs  dashboard.rs  delete.rs  init.rs  metrics.rs  migrate.rs  mod.rs  prune.rs  push.rs  query.rs  restart.rs  run.rs  start.rs  status.rs  stop.rs  sync.rs  update.rs  workspace_flow.rs
helix-cli/src/commands/integrations/: ecr.rs  fly.rs  helix.rs
helix-cli/src/commands/logs/: mod.rs
helix-cli/src/commands/templates/: fetcher.rs  mod.rs  processor.rs
helix-cli/src/tests/: ai_setup_tests.rs  backup_tests.rs  branch_tests.rs  check_tests.rs  compile_tests.rs  docker_tests.rs  init_tests.rs  mod.rs  support.rs
helix-container/: Cargo.toml
helix-container/src/: ivba_traversals.rs  main.rs  queries.rs
helix-db/: Cargo.toml
helix-db/.github/workflows/: helixc_perf_gate.yml
helix-db/benches/: bm25_benches.rs  capacity_optimization_benches.rs  helixc_compiler_benches.rs  hnsw_benches.rs
helix-db/examples/: memst_multi_session.rs
helix-db/proptest-regressions/protocol/custom_serde/: property_based_tests.txt
helix-db/src/: grammar.pest  lib.rs
helix-db/src/helix_engine/: macros.rs  mod.rs  rocks_utils.rs  slate_utils.rs  types.rs  utils.rs
helix-db/src/helix_engine/bm25/: bm25.rs  bm25_tests.rs  lmdb_bm25.rs  mod.rs  rocks_bm25.rs  slate_bm25.rs
helix-db/src/helix_engine/graph_core/: config.rs  traversal_tests.rs
helix-db/src/helix_engine/reranker/: reranker.rs
helix-db/src/helix_engine/storage_core/: graph_visualization.rs  metadata.rs  mod.rs  storage_concurrent_tests.rs  storage_core.rs  storage_methods.rs  storage_migration.rs  storage_migration_tests.rs  txn.rs  version_info.rs
helix-db/src/helix_engine/tests/: README.md  capacity_optimization_tests.rs  hnsw_tests.rs  mod.rs  storage_tests.rs  traversal_value_tests.rs  vector_tests.rs
helix-db/src/helix_gateway/: gateway.rs
helix-db/src/helix_gateway/mcp/: mcp.rs  (+2 more)
helix-db/src/helixc/: mod.rs  parity_snapshots.rs
helix-db/src/memst/: error.rs  memory.rs  mod.rs  objects.rs  store.rs  types.rs
helix-db/src/protocol/: date.rs  error.rs  format.rs  remapping.rs  request.rs  return_values.rs  value.rs
helix-db/src/utils/: filterable.rs  id.rs  items.rs  label_hash.rs  properties.rs  tqdm.rs
helix-db/tests/: batch_operations_test.rs  memst_uat.rs  memst_uat_multisession.rs  memst_unit.rs
helix-lib/: Cargo.toml  README.md  build.rs
helix-lib/examples/memory/: Cargo.toml  README.md
helix-lib/examples/simple/: Cargo.toml  README.md  build.rs
helix-lib/src/: build.rs  client.rs  error.rs  errors.rs  handler_metadata.rs  lib.rs
helix-protocol/: Cargo.toml  README.md  build.rs
helix-protocol/src/: lib.rs
hql-tests/: Cargo.toml  run.sh
hql-tests/file1/: queries.rs
hql-tests/file10/: queries.rs
hql-tests/file11/: queries.rs
hql-tests/file12/: queries.rs
hql-tests/file14/: queries.rs
hql-tests/file15/: queries.rs
hql-tests/file16/: queries.rs
hql-tests/file17/: queries.rs
hql-tests/file18/: queries.rs
hql-tests/file2/: queries.rs
hql-tests/file20/: queries.rs
hql-tests/file21/: queries.rs
hql-tests/file22/: queries.rs
hql-tests/file23/: queries.rs
hql-tests/file24/: queries.rs
hql-tests/file25/: queries.rs
hql-tests/file26/: queries.rs
hql-tests/file27/: queries.rs
hql-tests/file28/: queries.rs
hql-tests/file29/: queries.rs
hql-tests/file32/: queries.rs
hql-tests/file33/: queries.rs
hql-tests/file35/: queries.rs
hql-tests/file36/: queries.rs
hql-tests/file37/: queries.rs
hql-tests/file38/: queries.rs
hql-tests/file39/: queries.rs
hql-tests/file4/: queries.rs
hql-tests/file40/: queries.rs
hql-tests/file5/: queries.rs
hql-tests/file6/: queries.rs
hql-tests/file7/: queries.rs
hql-tests/file8/: queries.rs
hql-tests/file9/: queries.rs
hql-tests/src/: main.rs
hql-tests/tests/add_n/: helix.toml
hql-tests/tests/basic_object_remapping/: queries.hx
hql-tests/tests/basic_search_v/: queries.hx
hql-tests/tests/benchmarks/: queries.hx
hql-tests/tests/brute_force_search_v/: queries.hx
hql-tests/tests/cognee/: queries.hx
hql-tests/tests/companies_graph/: queries.hx
hql-tests/tests/companies_graph_v2/: queries.hx
hql-tests/tests/complete_vector_addition_and_search/: queries.hx
hql-tests/tests/contains/: schema.hx
hql-tests/tests/date_comparisons/: queries.hx
hql-tests/tests/dijkstra_custom_weights/: schema.hx
hql-tests/tests/edge_from_node_to_vec/: queries.hx
hql-tests/tests/graphiti/: queries.hx  schema.hx
hql-tests/tests/knowledge_graphs/: queries.hx  schema.hx
hql-tests/tests/match/: queries.hx
hql-tests/tests/migrations/: migrations.hx
hql-tests/tests/model_macro/: schema.hx
hql-tests/tests/multi_type_index_test/: queries.hx
hql-tests/tests/negating_exists/: queries.hx
hql-tests/tests/nested_for_loops/: queries.hx
hql-tests/tests/putts_professor/: queries.hx
hql-tests/tests/rerankers/: queries.hx
hql-tests/tests/scoped_search_v/: file8.hx
hql-tests/tests/search_hybrid/: config.hx.json  helix.toml  queries.hx  schema.hx
hql-tests/tests/series/: queries.hx  schema.hx
hql-tests/tests/update_drop_then_add/: file52.hx  schema.hx
hql-tests/tests/user_test_1/: queries.hx
hql-tests/tests/user_test_15/: queries.hx  schema.hx
hql-tests/tests/user_test_3/: queries.hx
hql-tests/tests/user_test_5/: queries.hx
hql-tests/tests/vector_precision/: helix.toml  queries.hx
metrics/: Cargo.toml
metrics/src/: events.rs  lib.rs
(+295 files in other folders)
