[package]
name = "helix-cli"
version = "2.3.0"
edition = "2024"

[dependencies]
helix-metrics = { workspace = true } #unified
helix-db = { workspace = true } #unified
clap = { workspace = true } #unified
serde = { workspace = true } #unified
tokio = { workspace = true } #unified
eyre = "0.6.12"
toml = "0.9.5"
dirs = "6.0.0"
reqwest = { workspace = true, features = ["blocking"] } #unified
serde_json = { workspace = true } #unified
color-eyre = "0.6.5"
cliclack = "0.3.7"
async-trait = "0.1.89"
thiserror = "2.0.12"
iota = "0.2.3"
self_update = "0.42.0"
uuid = { workspace = true, features = ["serde", "v4", "v6", "v7"] } #unified
chrono = { workspace = true, features = ["serde"] } #unified
flume = { workspace = true } #unified
dotenvy = { workspace = true } #unified
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
regex = "1.11.2"
sha2 = "0.10"
reqwest-eventsource = "0.6"
indicatif = "0.18.3"
webbrowser = "1.0"
heed3 = { workspace = true } #unified
open = "5.3"
ratatui = "0.29"
crossterm = "0.28"
tui-banner = "0.2.3"


[dev-dependencies]
tempfile = { workspace = true } #unified
serial_test = { workspace = true } #unified

[lib]
name = "helix_cli"
path = "src/lib.rs"

[[bin]]
name = "helix"
path = "src/main.rs"

[features]
normal = ["helix-db/server"]
ingestion = ["helix-db/full"]
default = ["normal"]
