[package]
name = "helix-container"
version = "0.1.0"
edition = "2024"

[dependencies]
helix-db = { workspace = true } #unified
helix-macros = { workspace = true } #unified
inventory = { workspace = true } #unified
rand = { workspace = true } #unified
dirs = "5.0.1"
chrono = { workspace = true } #unified
serde = { workspace = true } #unified
sonic-rs = "0.5.0"
tokio = { workspace = true } #unified
serde_json = { workspace = true } #unified
uuid = { workspace = true, features = ["serde", "std", "v4", "v6", "v7"] } #unified
heed3 = { workspace = true } #unified
async-trait = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing = { workspace = true } #unified
dotenvy = { workspace = true } #unified
bumpalo = { workspace = true, features = ["boxed", "collections", "serde"] } #unified

[features]
dev = ["helix-db/dev-instance"]
production = ["helix-db/production"]
