[package]
name = "helix-db"
version = "1.2.8"
edition = "2024"
description = "HelixDB is a powerful, open-source, graph-vector database built in Rust for intelligent data storage for RAG and AI."
license = "AGPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
helix-macros = { workspace = true } #unified
helix-metrics = { workspace = true } #unified
tokio = { workspace = true } #unified
serde = { workspace = true } #unified
bincode = "1.3.3" # TODO: Figure out bincode 2 impl with current serde impl
sonic-rs = "0.5.0"
inventory = { workspace = true } #unified
twox-hash = "2.1.0"
heed3 = { workspace = true } #unified
uuid = { workspace = true, features = ["serde", "v4", "v6", "v7"] } #unified
rand = { workspace = true } #unified
chrono = { workspace = true, features = ["serde"] } #unified
flume = { workspace = true } #unified
itertools = "0.14.0"
tempfile = { workspace = true } #unified
paste = "1.0.15"
rayon = "1.11.0"
mimalloc = "0.1.48"
bumpalo = { workspace = true } #unified
bytemuck = "1.24.0"
indexmap = { version = "2.7", features = ["serde"] }

# compiler dependencies
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }
ariadne = { version = "0.5", optional = true }
reqwest = { workspace = true, optional = true } #unified
url = { version = "2.5", optional = true }
tokio-util = { version = "0.7.15", features = ["compat"] }
axum = "0.8.4"
tracing = { workspace = true } #unified
core_affinity = "0.8.3"
async-trait = "0.1.88"
thiserror = "2.0.12"
polars = { version = "0.46.0", features = [
    "parquet",
    "lazy",
    "json",
], optional = true }
sha2 = { workspace = true } #unified
subtle = "2.5"

[dev-dependencies]
rand = { workspace = true } #unified
lazy_static = "1.4.0"
num_cpus = { workspace = true } #unified
proptest = "1.4"
criterion = "0.5"
loom = "0.7"          # Concurrency model checking
tokio-test = "0.4"    # Tokio testing utilities
serial_test = { workspace = true } #unified

[features]
debug-output = ["helix-macros/debug-output"]
compiler = ["pest", "pest_derive", "ariadne"]

# vector features
cosine = []
api-key = []
build = ["compiler"]
vectors = ["cosine", "url"]
server = ["build", "compiler", "vectors", "reqwest"]
full = ["build", "compiler", "vectors"]
bench = ["polars"]
dev = ["debug-output", "server", "bench"]
dev-instance = []
default = ["server"]
production = ["api-key","server"]

[[test]]
name = "capacity_optimization_benches"
path = "benches/capacity_optimization_benches.rs"
