[package]
name = "helix-metrics"
version = "0.1.1"
edition = "2024"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"
license = "AGPL-3.0"
description = "Metrics for HelixDB"

[dependencies]
reqwest = { workspace = true, features = ["blocking", "json"] } #unified
serde = { workspace = true } #unified
sonic-rs = "0.5.3"
chrono = { workspace = true, features = ["serde"] } #unified
uuid = { workspace = true, features = ["serde", "v4", "v6", "v7"] } #unified
tokio = { workspace = true } #unified
async-trait = "0.1.88"
flume = { workspace = true } #unified
num_cpus = { workspace = true } #unified
